# clutter-helix

./: Makefile.am  clutter-helix.pc.in  configure.ac
clutter-helix/: Makefile.am  clutter-helix-audio.c  clutter-helix-audio.h  clutter-helix-util.c  clutter-helix-util.h  clutter-helix-version.h.in  clutter-helix-video-texture.c  clutter-helix-video-texture.h  clutter-helix.h
doc/reference/: Makefile.am  version.xml.in
examples/: Makefile.am  audio-player.c  video-player.c  video-player2.c
